<resources>
    <string name="app_name">UoG-FinalProject</string>
    <string name="search_hint">search for products</string>
    <string name="toolbar_search">Search</string>
    <string name="nav_home">Home</string>
    <string name="nav_cate">Categories</string>
    <string name="nav_menu">Menu</string>

    <!-- REFERENCE:
        https://www.androidhive.info/2016/06/android-getting-started-firebase-simple-login-registration-auth/
    -->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Registere now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- REFERENCE:
    https://www.androidhive.info/2016/10/android-working-with-firebase-realtime-database/
    -->
    <string name="activity_sell_txt_label">What you wanna sell?</string>
    <string name="activity_sell_txt_photo"></string>
    <string name="activity_sell_edit_name">Item name</string>
    <string name="activity_sell_edit_description">Description</string>
    <string name="activity_sell_edit_location">Location</string>
    <string name="activity_sell_btn_photo">Photo</string>
    <string name="activity_sell_btn_submit">Sell</string>


</resources>

